kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.davidstewen.com
    external-dns.kubernetes.io/target: internal.davidstewen.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Networking
    gethomepage.dev/name: Hubble
    gethomepage.dev/icon: cilium.png
    gethomepage.dev/pod-selector: app.kubernetes.io/name=hubble-ui
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["hubble.davidstewen.com"]
  rules:
    -  backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
